<?xml version="1.0"?>
<package>
  <name>gsat_ros</name>
  <version>0.0.0</version>
  <description>The gsat_ros package</description>

  <maintainer email="d22g66@naver.com">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>

</package>